pagination admission table (#166)
* pagination admission table

* udpate test case and refactor naming

---------
